--- a/styles.css
+++ b/styles.css
@@ -44,12 +44,12 @@ button.gano {
 }
 
 .padding1{
-    padding: 1%;
+    padding: 5px;
 }
 
 
 .padding2{
-    padding: 2%;
+    padding: 20px;
 }
 
 
@@ -64,7 +64,7 @@ li span {
 
 
 .input-container{
-    padding: 2%;
+    padding: 10px;
 }
 
 .jugadores-container {
@@ -176,3 +176,49 @@ button.gano {
         opacity: 1;
     }
     
+
+
+    /* Inicio Modal */
+    .modal {
+        display: none; /* Oculto por defecto */
+        position: fixed; 
+        z-index: 1; 
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%; 
+        overflow: auto; 
+        
+        background-color: rgba(0, 0, 0, 0.727); 
+    }
+    
+    .modal-content {
+        background-color: #1b112b;
+        margin: 15% auto; 
+        padding: 20px;
+        border: 5px solid #888;
+        border-radius: 5px;
+        width: 80%; 
+    }
+
+    .modal-content h2{
+        margin: 5px;
+        padding: 10px;
+    }
+    
+    .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+    
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    
+     /* Fin modal  */
